# is-hidden-file

./: .gitignore  .yarnrc.yml  CMakeLists.txt  LICENSE  README.md  jestconfig.json  package.json  tsconfig.cjs.json  tsconfig.esm.json
src/: index.d.ts  index.js  index.test.js  index.ts  module.cc
src/__tests__/: hidden.test.ts
